<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/osna_yellow"
    android:visibility="invisible"
    android:alpha="0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height">

        <ImageButton
            android:id="@+id/logo_white"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_description_hallo_osna_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_white" />

        <ImageButton
            android:id="@+id/ic_help_white"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_description_help_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_help_white" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="@dimen/enormous_symbol_size"
        android:layout_height="@dimen/enormous_symbol_size"
        android:layout_centerInParent="true"
        android:contentDescription="@string/content_description_hallo_osna_symbol"
        android:src="@drawable/symbol" />
</RelativeLayout>