<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/osna_yellow"
        tools:context=".HelpActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/help_contents_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageButton
                android:id="@+id/help_logo"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_marginStart="20dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/logo_white"
                android:background="@android:color/transparent"
                android:contentDescription="@string/content_description_help_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/help_symbol"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="28dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/symbol"
                android:background="@android:color/transparent"
                android:contentDescription="@string/content_description_help_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/help_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/help_logo"
                android:layout_marginTop="24dp"
                android:paddingHorizontal="36dp"
                android:lineSpacingMultiplier="1.28"
                android:text="@string/help_body"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/help_logo" />

            <TextView
                android:id="@+id/help_footer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="36dp"
                android:lineSpacingMultiplier="1.24"
                android:text="@string/help_footer"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/help_body" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/help_thanks_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/help_thanks_to"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/help_participants_marquee" />

        <TextView
            android:id="@+id/help_participants_marquee"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>